Append ".desktop" to generated link files so that they are not identified as something they are not.

BUG: 224142
FIXED-IN: 4.8.0
REVIEW: 103691